--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "dev": "next dev --turbo",
     "build": "tsx lib/db/migrate && next build",
     "start": "next start",
-    "lint": "next lint && biome lint --write --unsafe",
-    "lint:fix": "next lint --fix && biome lint --write --unsafe",
-    "format": "biome format --write",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "format": "prettier --write .",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "npx tsx lib/db/migrate.ts",
     "db:studio": "drizzle-kit studio",
@@ -34,9 +34,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@radix-ui/react-visually-hidden": "^1.1.0",
-    "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.24.1",
-    "@vercel/postgres": "^0.10.0",
     "ai": "4.0.20",
     "bcrypt-ts": "^5.0.2",
     "class-variance-authority": "^0.7.0",
@@ -48,10 +46,11 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.34.0",
     "fast-deep-equal": "^3.1.3",
-    "framer-motion": "^11.3.19",
+    "framer-motion": "12.0.0-alpha.2",
     "geist": "^1.3.1",
     "lucide-react": "^0.446.0",
     "nanoid": "^5.0.8",
+    "next": "15.1.3",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.3.0",
     "orderedmap": "^2.1.1",
@@ -66,7 +65,6 @@
     "prosemirror-view": "^1.34.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.3",
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.7",
     "remark-gfm": "^4.0.0",
@@ -74,28 +72,30 @@
     "sonner": "^1.5.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/typography": "^0.5.15",
     "@types/d3-scale": "^4.0.8",
+    "@types/node": "^22.8.6",
     "@types/pdf-parse": "^1.1.4",
-    "drizzle-kit": "^0.25.0",
-    "typescript": "^5",
-    "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "drizzle-kit": "^0.25.0",
+    "eslint": "^9.17.0",
     "eslint-config-next": "15.1.3",
-    "@eslint/eslintrc": "^3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "postcss": "^8",
+    "prettier": "3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.1",
-    "tsx": "^4.19.1"
+    "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.19.1",
+    "typescript": "^5"
   }
 }
