--- a/package.json
+++ b/package.json
@@ -83,6 +83,8 @@
     "@types/pdf-parse": "^1.1.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vercel/analytics": "^1.4.1",
+    "@vercel/speed-insights": "^1.1.0",
     "drizzle-kit": "^0.25.0",
     "eslint": "^9.17.0",
     "eslint-config-next": "15.1.3",
