--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "db:up": "drizzle-kit up"
   },
   "dependencies": {
-    "@ai-sdk/openai": "1.0.6",
+    "@ai-sdk/openai": "1.0.19",
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-python": "^6.1.6",
     "@codemirror/state": "^6.5.0",
@@ -35,7 +35,8 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@radix-ui/react-visually-hidden": "^1.1.0",
     "@vercel/blob": "^0.24.1",
-    "ai": "4.0.20",
+    "@vercel/postgres": "^0.10.0",
+    "ai": "4.0.36",
     "bcrypt-ts": "^5.0.2",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
