feat: add dry-build script to package.json for easier build testing

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev --turbo",
     "build": "tsx lib/db/migrate && next build",
+    "dry-build": "next build",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
